# search-demo

./: .gitignore  README.md  setup.cfg
src/: __init__.py
src/search_demo/: __init__.py  demo.py
