[metadata]
name = search_demo
version = 0.1
author = Thomas Carroll
author_email = tcarroll@snufk.in
description = Extremely simple curses search result demo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/snus-kin/search-demo
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3) 
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
